Closed Bug 491195 Opened 14 years ago Closed 14 years ago

fix warnings in qcms

Categories

(Core :: Graphics: Color Management, defect)

x86
macOS
defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

      No description provided.
Attached patch patchSplinter Review
Attachment #375516 - Flags: review?(bobbyholley)
Attachment #375516 - Flags: review?(bobbyholley) → review?(jmuizelaar)
Comment on attachment 375516 [details] [diff] [review]
patch

jeff should look at this instead.
Comment on attachment 375516 [details] [diff] [review]
patch

Looks fine to me.
Attachment #375516 - Flags: review?(jmuizelaar) → review+
hey, do i need additional reviews? and does this need to go to some upstream first?

i'm not really baby sitting patches (i'm filing dozens of patches and hoping others will magically push them into the tree).
Attachment #375516 - Flags: superreview?(pavlov)
Comment on attachment 375516 [details] [diff] [review]
patch

There is no upstream, that's one of the points of qcms :)
Target Milestone: --- → mozilla1.9.2a1
Attachment #375516 - Flags: superreview?(pavlov)
Comment on attachment 375516 [details] [diff] [review]
patch

This doesn't need superreview. I'll try to check something like this in eventually. Note: looking over this again, a lot of the types still mismatch. e.g. unsigned int instead of size_t.
http://hg.mozilla.org/mozilla-central/rev/29669195ef97
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.