Bug 491195 fix warnings in qcms mostly comparisons between unsigned and signed also an incomplete initializer and a warning about using C++ style variables r=jrmuizel