gfx/qcms/iccread.c
@@ -200,7 +200,7 @@ struct tag_index {
 static struct tag_index read_tag_table(qcms_profile *profile, struct mem_source *mem)
 {
 	struct tag_index index = {0, NULL};
-	int i;
+	unsigned int i;
 
 	index.count = read_u32(mem, 128);
 	if (index.count > MAX_TAG_COUNT) {
@@ -297,7 +297,7 @@ qcms_bool qcms_profile_is_bogus(qcms_profile *profile)
 
 static struct tag *find_tag(struct tag_index index, uint32_t tag_id)
 {
-	int i;
+	unsigned int i;
 	struct tag *tag = NULL;
 	for (i = 0; i < index.count; i++) {
 		if (index.tags[i].signature == tag_id) {
@@ -314,7 +314,7 @@ static struct tag *find_tag(struct tag_index index, uint32_t tag_id)
 
 static struct XYZNumber read_tag_XYZType(struct mem_source *src, struct tag_index index, uint32_t tag_id)
 {
-	struct XYZNumber num = {0};
+	struct XYZNumber num = {0, 0, 0};
 	struct tag *tag = find_tag(index, tag_id);
 	if (tag) {
 		uint32_t offset = tag->offset;
@@ -339,7 +339,7 @@ static struct curveType *read_tag_curveType(struct mem_source *src, struct tag_i
 		uint32_t offset = tag->offset;
 		uint32_t type = read_u32(src, offset);
 		uint32_t count = read_u32(src, offset+8);
-		int i;
+		unsigned int i;
 
 		if (type != CURVE_TYPE) {
 			invalid_source(src, "unexpected type, expected CURV");
